TGR-745: Performance boost TigerProxy